Now we update the URL even for typeahead searches

--- a/htmx-spike/htmx-spike.csproj
+++ b/htmx-spike/htmx-spike.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>htmx_spike</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Htmx" Version="0.0.18" />
+  </ItemGroup>
+
 </Project>
